Cambios para quitar anti patrones del sistema y mejorar los principios SOLID